# secure-term-chat

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ADVANCED_OPTIMIZATIONS_REPORT.md  BUG_FIX_REPORT.md  CHANGELOG.md  CRITICAL_FIXES_TEST_REPORT.md  CRYPTO_AUDIT.md  DEPLOYMENT_GUIDE.md  Dockerfile  HYBRID_CRYPTO_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  OPTIMIZATIONS_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  ROOM_KEY_FIX_REPORT.md  SECURITY.md  SECURITY_ENHANCEMENTS.md  SECURITY_FIXES_REPORT.md  SECURITY_ISSUES_ANALYSIS.md  THREAT_MODEL.md  advanced_optimizations.py  audit_compliance.py  audit_compliance_ui.py  auto_scaling.py  benchmark_hybrid.py  client.py  crypto_architecture.md  double_ratchet_custom.py  encrypted_keystore.py  enhanced_ui.py  ephemeral_rooms.py  file_transfer.py  file_transfer_ui.py  fix_syntax.py  hybrid_crypto.py  hybrid_protocol.py  integration_plan.md  keystore.py  (+33 more)
.github/workflows/: ci.yml
scripts/: setup_dev.sh
secure_term_chat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_simple.py
