[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "secure-term-chat"
version = "0.2.0"
description = "Ultra-secure E2EE encrypted terminal chat — XChaCha20-Poly1305, X25519, Ed25519, Double Ratchet"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "cryptography>=42.0",
    "pynacl>=1.5",
    "textual>=0.60",
]

[project.scripts]
secure-term-chat-server = "server:main"
secure-term-chat = "client:main"

[project.urls]
Homepage = "https://github.com/Gzeu/secure-term-chat"
Repository = "https://github.com/Gzeu/secure-term-chat"

[tool.ruff]
line-length = 100
target-version = "py312"
